--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <!-- HOME -->
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
